<?xml version="1.0"?>
<package format="2">
  <name>lar_gazebo</name>
  <version>1.1.0</version>
  <description>The lar_gazebo package</description>

  <maintainer email="ericksuzart@ufba.br">Erick Suzart Souza</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/ericksuzart/lar_gazebo</url>

  <author email="ericksuzart@ufba.br">Erick Suzart Souza</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_depend>gazebo_ros</build_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!--export path of models to gazebo enviroment-->
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/models" />
  </export>
</package>
